--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,10 @@ main:
   #   url: /talks/    
 
   - title: "Teaching"
-    url: /teaching/    
+    url: /teaching/
+
+  - title: "Supervised Theses"
+    url: /supervising/  
     
   # - title: "Portfolio"
   #   url: /portfolio/
